@startuml

title __ONLINE's Class Diagram__\n

  namespace ru.gb.jtwo.lfour.online {
    class ru.gb.jtwo.lfour.online.ChatServer {
        + start()
        + stop()
    }
  }
  

  namespace ru.gb.jtwo.lfour.online {
    class ru.gb.jtwo.lfour.online.ClientGUI {
        {static} - HEIGHT : int
        {static} - WIDTH : int
        - btnDisconnect : JButton
        - btnLogin : JButton
        - btnSend : JButton
        - cbAlwaysOnTop : JCheckBox
        - log : JTextArea
        - panelBottom : JPanel
        - panelTop : JPanel
        - shownIoErrors : boolean
        - tfIPAddress : JTextField
        - tfLogin : JTextField
        - tfMessage : JTextField
        - tfPassword : JPasswordField
        - tfPort : JTextField
        - userList : JList<String>
        + actionPerformed()
        {static} + main()
        + uncaughtException()
        - ClientGUI()
        - putLog()
        - sendMessage()
        - showException()
        - wrtMsgToLogFile()
    }
  }
  

  namespace ru.gb.jtwo.lfour.online {
    class ru.gb.jtwo.lfour.online.ServerGUI {
        {static} - HEIGHT : int
        {static} - POS_X : int
        {static} - POS_Y : int
        {static} - WIDTH : int
        - btnStart : JButton
        - btnStop : JButton
        + actionPerformed()
        {static} + main()
        + uncaughtException()
        - ServerGUI()
    }
  }
  

  ru.gb.jtwo.lfour.online.ClientGUI .up.|> java.awt.event.ActionListener
  ru.gb.jtwo.lfour.online.ClientGUI .up.|> java.lang.Thread.UncaughtExceptionHandler
  ru.gb.jtwo.lfour.online.ClientGUI -up-|> javax.swing.JFrame
  ru.gb.jtwo.lfour.online.ServerGUI .up.|> java.awt.event.ActionListener
  ru.gb.jtwo.lfour.online.ServerGUI .up.|> java.lang.Thread.UncaughtExceptionHandler
  ru.gb.jtwo.lfour.online.ServerGUI -up-|> javax.swing.JFrame
  ru.gb.jtwo.lfour.online.ServerGUI o-- ru.gb.jtwo.lfour.online.ChatServer : chatServer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
